Fix overflow on mobile

--- a/site/assets/scss/bases/_layout.scss
+++ b/site/assets/scss/bases/_layout.scss
@@ -28,9 +28,11 @@ p, blockquote {
 }
 
 .o-overflow{
-    overflow: hidden;
-    position: relative;
-    height: 100vh;
+    @include media( '>medium' ) {
+        overflow: hidden;
+        position: relative;
+        height: 100vh;
+    }
 }
 .o-scroller {
     display: none;
